<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Prestamo.update.UpdateFragment"
    android:padding="24dp"
    >

    <EditText
        android:id="@+id/updateDeudor_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_deudor"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/updateConcepto_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_concepto"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="@id/updateDeudor_et"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/updateMonto_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_monto"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="@id/updateConcepto_et"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateMonto_et" />

</androidx.constraintlayout.widget.ConstraintLayout>