<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Prestamo.add.AddFragment"
    android:padding="24dp">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/addDeudor_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_deudor"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/addConcepto_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_concepto"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="@id/addDeudor_et"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/addMonto_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_monto"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="@id/addConcepto_et"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addMonto_et" />

</androidx.constraintlayout.widget.ConstraintLayout>