<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.aplicada2.tareai.fragments.Prestamo.list.ListFragment"
        android:label="@string/bamelista"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />

        <action
            android:id="@+id/action_listFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.aplicada2.tareai.fragments.Prestamo.add.AddFragment"
        android:label="@string/nameRegistroPrestamo"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_addFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.aplicada2.tareai.fragments.Prestamo.update.UpdateFragment"
        android:label="@string/btn_update"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_updateFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="currentPrestamo"
            app:argType="com.aplicada2.tareai.data.database.entities.Prestamo" />
    </fragment>
</navigation>